[package]
name = "guardian"
version = "1.0.0"

description = "Provides owned mutex guards for refcounted mutexes."
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/guardian"
homepage = "https://github.com/jonhoo/guardian"
repository = "https://github.com/jonhoo/guardian.git"

keywords = ["locks","mutex","synchronization","rc"]
categories = ["concurrency"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "jonhoo/guardian" }

[dependencies]
